Address PR Feedback: Pass through additional props on ActivityOutboundLink, add comment for activity panel wrapping padding, fix README naming, and use $gap $gutter trick for outbound link padding.

--- a/client/layout/activity-panel/activity-outbound-link/style.scss
+++ b/client/layout/activity-panel/activity-outbound-link/style.scss
@@ -7,17 +7,13 @@
 	height: 50px;
 	background: $core-grey-light-200;
 	border-bottom: 1px solid $core-grey-light-400;
-	padding: $gap;
+	padding: $gap $gutter;
 	font-size: 13px;
 	font-weight: 500;
 	line-height: 18px;
 	margin: 0;
 	color: $woocommerce;
 	text-decoration: none;
-
-	@include breakpoint( '>782px' ) {
-		padding: $gap $gap-large $gap $gap-large;
-	}
 
 	.gridicon {
 		display: none;
